--- a/index.html
+++ b/index.html
@@ -24,15 +24,28 @@
                     <div class="banner-content">
                         <h1 class="banner-title">"In the near future, I hope to <br> become a Developer."</h1>
                         <p class="banner-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's <br> standard dummy text.</p>
-                        <button class="btn">Contact with me</button>
+                        <button class="banner-btn">Contact with me</button>
                     </div>
                 </div>
     </header>
     <main>
-        <section>
-            <h3 class="section-title">Why Web Development??</h3>
-            <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        <section class="section">
+            <div class="section-div">
+                <h3 class="section-title">Why Web Development??</h3>
+                 <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
             
+            <div class="resume">
+                <div class="resume-column">
+                    <h2 class="resume-column-title">I will Do Coding and Change The World</h2>
+                    <p class="resume-column-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <button class="btn-primary">Learn More</button>
+                </div> 
+                <div>
+                    <img src="./assets/Layer_1.png" alt="">
+                </div>
+            </div>
+
         </section>
     </main>
     <footer>
