--- a/index.html
+++ b/index.html
@@ -45,6 +45,26 @@
                     <img src="./assets/Layer_1.png" alt="">
                 </div>
             </div>
+            <div class="resume">
+                <div>
+                    <img src="./assets/Group 3.png" alt="">
+                </div>
+                <div class="resume-column">
+                    <h2 class="resume-column-title">I will help People by creating Modern Web System</h2>
+                    <p class="resume-column-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <button class="btn-primary">Learn More</button>
+                </div> 
+            </div>
+            <div class="resume">
+                <div class="resume-column">
+                    <h2 class="resume-column-title">I will Do Coding and Change The World</h2>
+                    <p class="resume-column-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <button class="btn-primary">Learn More</button>
+                </div> 
+                <div>
+                    <img src="./assets/Layer_1.png" alt="">
+                </div>
+            </div>
 
         </section>
     </main>
