--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                     </div>
                     <div class="banner-content">
                         <h1 class="banner-title">"In the near future, I hope to <br> become a Developer."</h1>
-                        <p class="banner-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's <br> standard dummy text.</p>
+                        <p class="banner-description">I would like to be a programmer in the future. That's my dream job. I'm 16, and I want to start learning. What languages,<br> I think that is what I should start learning, <br>should I start learning that could be the most needed in the future?</p>
                         <button class="banner-btn">Contact with me</button>
                     </div>
                 </div>
     </header>
     <main>
-        <section class="section">
-            <div class="section-div">
+        <section class="section>
+            <div class="sub-section">
                 <h3 class="section-title">Why Web Development??</h3>
-                 <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> Lorem Ipsum has been the industry's standard dummy text.</p>
+                 <p class="section-description">Web developers provide businesses with the unique, engaging websites they need to connect with customers. <br> While businesses could feasibly create their own sites using Wix, Squarespace, or WordPress templates,<br> these tend to look amateurish and run slowly compared to sites built by professional Web Developers.</p>
             </div>
             
             <div class="resume">
@@ -62,10 +62,42 @@
                     <button class="btn-primary">Learn More</button>
                 </div> 
                 <div>
-                    <img src="./assets/Layer_1.png" alt="">
+                    <img src="./assets/Group 4.png" alt="">
                 </div>
             </div>
+        </section>
+            
 
+        <section class="section-video">
+            <div class="section-div">
+                <h3 class="section-title">My Inspiration</h3>
+                 <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+           <div class="youtube">
+            <iframe  width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=fCn3FHKqQvmjkk0p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+           </div>
+        </section>
+        <section class="skills">
+            <h3 class="section-title">My Current Target</h3>
+            <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+
+            <div class="skills-container">
+                <div class="skill-1">
+                    <img src="assets/html.png" alt="">
+                    <h4 class="skill-title">HTML</h4>
+                    <p class="skill-description">HTML stands for Hyper Text Markup Language. HTML is the standard markup language for creating Web pages. HTML describes the structure of a Web page. HTML consists of a series of elements. HTML elements tell the browser how to display the content.</p>
+                </div>
+                <div class="skill-2">
+                    <img src="assets/css.png" alt="">
+                    <h4 class="skill-title">CSS</h4>
+                    <p class="skill-description">CSS is the acronym of “Cascading Style Sheets”. CSS is a computer language for laying out and structuring web pages (HTML or XML). This language contains coding elements and is composed of these “cascading style sheets” which are equally called CSS files (. css).</p>
+                </div>
+                <div class="skill-3">
+                    <img src="assets/js.png" alt="">
+                    <h4 class="skill-title">JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
