--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 </div>
     </header>
     <main>
-        <section class="section>
-            <div class="sub-section">
+        <section class="section">
+            <div class="section-div">
                 <h3 class="section-title">Why Web Development??</h3>
                  <p class="section-description">Web developers provide businesses with the unique, engaging websites they need to connect with customers. <br> While businesses could feasibly create their own sites using Wix, Squarespace, or WordPress templates,<br> these tend to look amateurish and run slowly compared to sites built by professional Web Developers.</p>
             </div>
@@ -66,7 +66,6 @@
                 </div>
             </div>
         </section>
-            
 
         <section class="section-video">
             <div class="section-div">
@@ -77,6 +76,7 @@
             <iframe  width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=fCn3FHKqQvmjkk0p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
            </div>
         </section>
+        
         <section class="skills">
             <h3 class="section-title">My Current Target</h3>
             <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
@@ -99,9 +99,24 @@
                 </div>
             </div>
         </section>
+        <div class="footer-column">
+            <h2 class="section-title footer-title">I need Support</h2>
+            <p class="section-description footer-description">You are not a toy that he can walk in and leave as in when he chooses.</p>
+            <form action="">
+                <textarea name="" id="" cols="90" rows="4" placeholder="Suggest me any feedback for me"></textarea>
+                <input class="btn-primary" type="submit" value="Submit" placeholder="Submit">
+            </form>
+        </div>
     </main>
     <footer>
-
+        <div class="section-title">
+                <h2>An Open Commitment by Awlad Hossain</h2>
+            <div class="icon">
+                <a href=""><img src="assets/facebook.png" alt=""></a>
+                <a href=""><img src="assets/github.png" alt=""></a>
+                <a href=""><img src="assets/linkedin-icon 1.png" alt=""></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
